# lightcurve-fitting

./: .gitignore  .gitmodules  Cargo.toml  README.md  create_csvs.py  format_json.py  lightcurves_vs_main.patch  main.py  make_comparison_plots.py  make_extended_comparison_plots.py  nonparametric_timescale_parameters.csv  parametric_timescale_parameters.csv  perf.data.old  pyproject.toml  simulate_and_validate.py
python_tools/: chi2_hist.py  create_csvs.py  format_json.py  get_data.py  make_extended_comparison_plots.py  plot_candidate.py  sanitize_json.py  train.py
src/: lib.rs  lightcurve_common.rs  lightcurves.rs  lightcurves_Bazin.rs  lightcurves_GP.rs  lightcurves_Villar_PSO.rs  main.rs  models.rs  ztf_enrichment.rs
src/lightcurve_fitting.egg-info/: PKG-INFO  SOURCES.txt
