[package]
name = "lightcurve-fiting"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.0"
schemars = "0.9.0"
anyhow = "1.0.100"
serde_json = "1.0.145"
scirs2-core = { version = "=0.1.0-rc.4", default-features = false, features = ["random"] }
sklears-gaussian-process = "0.1.0-alpha.2"
sklears-core = "0.1.0-alpha.2"
argmin = "0.11.0"
rayon = "1.7"
rand = "0.8"
plotters = "0.3"
argmin-math = { version = "0.5.1", features = ["vec"] }
