[package]
name = "lightcurve-fiting"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.0"
schemars = "0.9.0"
anyhow = "1.0.100"
serde_json = "1.0.145"
argmin = "0.11.0"
rayon = "1.7"
rand = { version = "0.9.2", features = ["small_rng"] }
plotters = "0.3"
argmin-math = { version = "0.5.1", features = ["nalgebra_latest", "vec"] }
egobox-ego = "0.24"
egobox-gp = "0.24"
linfa = "0.7"
ndarray = "0.15"

# sklears / scirs dependencies for alternative GP backend
sklears-gaussian-process = "0.1.0-beta.1"
sklears-core = "0.1.0-beta.1"
scirs2-core = "0.1.1"
csv = "1.4.0"
lightgbm3 = "1.0.10"
nalgebra = "0.34.1"
fast-math = "0.1.1"
wide = "1.1.1"

#[[bin]]
#name = "fit_villar_nelder_mead"
#path = "src/bin/fit_villar_nelder_mead.rs"
#
#[[bin]]
#name = "fit_villar_lbfgsb"
#path = "src/bin/fit_villar_lbfgsb.rs"
#
#[[bin]]
#name = "fit_villar_lbfgsb_analytical"
#path = "src/bin/fit_villar_lbfgsb_analytical.rs"
#
#[[bin]]
#name = "fit_villar_lbfgsb_test"
#path = "src/bin/fit_villar_lbfgsb_test.rs"
#
#[[bin]]
#name = "fit_villar_ego"
#path = "src/bin/fit_villar_ego.rs"
#
#[[bin]]
#name = "plot_ztf_temperature_egobox"
#path = "src/bin/plot_ztf_temperature_egobox.rs"
